--- a/.github/workflows/compile-pdf.yml
+++ b/.github/workflows/compile-pdf.yml
@@ -30,3 +30,10 @@ jobs:
           name: documentation-pdf
           path: documentation.pdf
 
+      - name: Upload PDF to release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+        files: documentation.pdf
+
+
