modified workflow for code syntax highlight

--- a/.github/workflows/compile-pdf.yml
+++ b/.github/workflows/compile-pdf.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Install Asciidoctor PDF
         run: |
+          gem install rouge 
           gem install asciidoctor
           gem install asciidoctor-pdf
 
